<resources>
    <string name="app_name">MEP</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_photo">Add Photo</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="county">County</string>
    <string name="project_ids">Project ID</string>
    <string name="project_type">Project Type</string>
    <string name="project_types">Project Type(s)</string>
    <string name="est_low">Est. Low</string>
    <string name="stage">STAGE</string>
    <string name="stage_normal">Stage</string>
    <string name="notes">Notes</string>
    <string name="participants">Participants</string>
    <string name="architects">Architects</string>
    <string name="owner">Owner</string>
    <string name="project_bidders">Project Bidders</string>
    <string name="project_participant">PARTICIPANTS</string>
    <string name="architect">Architect</string>
    <string name="see_all">See All</string>
    <string name="updating">Updating..</string>
    <string name="est_high">Est. High</string>
    <string name="date_added">Date Added</string>
    <string name="bid_date">Bid Date</string>
    <string name="start_date">Target Start Date</string>
    <string name="last_updated">Last Updated</string>
    <string name="value">Value</string>
    <string name="jurisdiction">Jurisdiction</string>
    <string name="b_h">B/H</string>
    <string name="bidders">Bidders</string>
    <string name="bids">Bids</string>
    <string name="at">at</string>
    <string name="title">Title</string>
    <string name="organization">Organization</string>
    <string name="fax">Fax</string>
    <string name="street_address">Street Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="edit_upper">Edit</string>
    <string name="discard">Discard</string>
    <string name="select">Select</string>
    <string name="none">None</string>
    <string name="valuation">Valuation</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_login">Login</string>
    <string name="powered_by_domandtom">Powered by Dom &amp; Tom</string>
    <string name="new_create_account">New? Create an Account</string>
    <string name="login">Login</string>
    <string name="sign_up_for_mep_access">
        <u>Sign Up for MEP Access</u>
    </string>
    <string name="title_fragment_bids_recently_made">Bids Recently Made</string>
    <string name="title_fragment_bids_happening_soon">Bids Happening Soon</string>
    <string name="title_fragment_projects_recently_added">Projects Recently Added</string>
    <string name="title_fragment_projects_recently_updated">Projects Recently Updated</string>
    <string name="dashboard_projects">PROJECTS</string>
    <string name="dashboard_recently_made">PROJECTS RECENTLY BID</string>
    <string name="dashboard_happening_soon">PROJECTS BIDDING SOON</string>
    <string name="dashboard_recently_added">PROJECTS RECENTLY ADDED</string>
    <string name="dashboard_recently_updated">PROJECTS RECENTLY UPDATED</string>
    <string name="dashboard_housing">HOUSING</string>
    <string name="dashboard_engineering">ENGINEERING</string>
    <string name="dashboard_building">BUILDING</string>
    <string name="dashboard_utilities">UTILITIES</string>
    <string name="dashboard_heavy_highway">HEAVY HIGHWAY</string>
    <string name="title_activity_create_password">Create Password</string>
    <string name="lets_create_a_password">Let\'s create a password for your account.</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="create_password">Create Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="current">Current</string>
    <string name="new_word">New</string>
    <string name="your_current">Your current password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="at_least_six_char">At least 6 characters</string>
    <string name="please_enter_current_password">Please enter your current password.</string>
    <string name="invalid_password_title">Invalid password</string>
    <string name="invalid_password_message">Please enter a valid password</string>
    <string name="password_mismatch">The entered passwords do not match</string>
    <string name="password_confirm_message">Are you sure you want to change your password?</string>
    <string name="change_password_success">Change password has been successful</string>
    <string name="title_activity_company_detail_project_bids">Company Detail: Project Bids</string>
    <string name="title_activity_project_tracking_list">Project Tracking List</string>
    <string name="new_bid_placed">A new bid has been placed</string>
    <string name="bid_placed_at">A bid was placed at</string>
    <string name="new_note_added">A new note has been added</string>
    <string name="new_contact_added">A new contact has been added</string>
    <string name="new_project_type_added">A new project type added</string>
    <string name="new_stage">Stage is now </string>
    <string name="show_updates">Show Updates</string>
    <string name="edit">EDIT</string>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="company">Company</string>
    <string name="companies">Companies</string>
    <string name="pending_changes">There are pending changes to your list. Would you like to discard
        them?
    </string>
    <string name="project_saved_searches">PROJECT SAVED SEARCHES</string>
    <string name="company_saved_searches">COMPANY SAVED SEARCHES</string>
    <string name="recent">RECENT</string>
    <string name="last_checked">Last checked yesterday</string>
    <string name="search">Search</string>
    <string name="geofence_transition_invalid_type">Invalid geofence</string>
    <string name="geofence_not_available">Geofence is not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents</string>
    <string name="geofence_unknown_error">Unknown geofence error</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_projects_found">No projects found near your fullAddress</string>
    <string name="title_activity_main">Main</string>
    <string name="check_in">Check-in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activate">Activate</string>
    <string name="location_info_1">Location Info 1</string>
    <string name="location_info_2">Location Info 2</string>
    <string name="location_info_3">Location Info 3</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="list1">List 1</string>
    <string name="list2">List 2</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="help">Help</string>
    <string name="track">Track</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="yes">Yes</string>
    <string name="accept">Accept</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="continue_str">Continue</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="union_mark">N</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password_length">Invalid password length</string>
    <string name="error_first_name">Please enter your first name</string>
    <string name="error_last_name">Please enter your last name</string>
    <string name="error_login_title">Login Error</string>
    <string name="error_login_message">Please verify your email and password and try again</string>
    <string name="error_access_denied">You don\’t have permission to access MEP using your account</string>
    <string name="error_network_title">Network Error</string>
    <string name="error_network_message">Please check your internet connection and try again</string>
    <string name="error_fetching_address">Address not found.</string>
    <string name="error_unauthorized_user">Invalid Session. Please login again.</string>
    <string name="error_user_not_found">User not found. Please login again.</string>
    <string name="error_project_update_failed_title">Update Failed</string>
    <string name="error_project_update_failed">The project update was not successful.</string>
    <string name="lecet_signup_url">http://lecet.dt-staging.com/#/onboarding</string>
    <string name="get_directions">Get Directions</string>
    <string name="post_bid">POST BID</string>
    <string name="pre_bid">PRE BID</string>
    <string name="confirm_share_your_location_description">This feature is only available\n
        when you share your fullAddress\nwith this app. Please tap OK\nwhen prompted.
    </string>
    <string name="confirm_share_your_location_description_optional">
        This feature can include fullAddress\n
        information in your post when\n
        you share your fullAddress with this app.\n
        Please tap OK if you wish to include\n
        your fullAddress.
    </string>
    <string name="confirm_enable_your_location_description">This feature is only available\nwhen you
        share your fullAddress\nwith this app.
    </string>
    <string name="confirm_share_your_location">SHARE MY LOCATION</string>
    <string name="confirm_go_to_settings">GO TO SETTINGS</string>
    <string name="confirm_cancel">CANCEL</string>
    <string name="mtm_menu_number_company">%d Companies</string>
    <string name="mtm_menu_number_projects">%d Projects</string>
    <string name="time_any">Any</string>
    <string name="time_next_7_days">Next 7 Days</string>
    <string name="time_next_14_days">Next 14 Days</string>
    <string name="time_next_21_days">Next 21 Days</string>
    <string name="time_next_30_days">Next 30 Days</string>
    <string name="time_last_7_days">Last 7 Days</string>
    <string name="time_last_14_days">Last 14 Days</string>
    <string name="time_last_21_days">Last 21 Days</string>
    <string name="time_last_30_days">Last 30 Days</string>
    <string name="mseapply">Apply</string>
    <string name="msebidding_within">Bidding Within</string>
    <string name="bid_status">Bid Status</string>
    <string name="type">Type</string>
    <string name="target_set_date">Target Set Date</string>
    <string name="project_title">Project Title</string>
    <string name="street_1">Street 1</string>
    <string name="street_2">Street 2</string>
</resources>