<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_home"
          android:icon="@mipmap/ic_home_black"
          android:title="@string/home"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_profile"
          android:icon="@mipmap/ic_account_circle_black"
          android:title="@string/profile"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_selection"
          android:icon="@mipmap/ic_grade_black"
          android:title="@string/selection"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_list1"
          android:icon="@mipmap/ic_favorite_border_black"
          android:title="@string/list1"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_list2"
          android:icon="@mipmap/ic_hot_tub_black"
          android:title="@string/list2"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_payment"
          android:icon="@mipmap/ic_account_balance_black"
          android:title="@string/payment"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_settings"
          android:icon="@mipmap/ic_settings_black"
          android:title="@string/settings"
          android:onClick="onMenuItemClicked"/>

    <item android:id="@+id/menu_item_help"
          android:icon="@mipmap/ic_help_outline_black"
          android:title="@string/help"
          android:onClick="onMenuItemClicked"/>
</menu>