<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.lecet.app.viewmodel.AddProjectActivityViewModel"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pureWhite"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.lecet.app.content.AddProjectActivity">

            <!-- Project Title -->
            <TextView
                    style="@style/AddProjectFieldTitle"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    bind:typeface="@{`Lato-Bold.ttf`}"/>

            <EditText
                    android:id="@+id/title"
                    style="@style/AddProjectField"
                    android:hint="@string/project_title"/>

        <!-- Address -->
            <TextView
                    style="@style/AddProjectFieldTitle"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    bind:typeface="@{`Lato-Bold.ttf`}"/>

            <EditText
                    android:id="@+id/address1"
                    style="@style/AddProjectField"
                    android:hint="@string/street_1"/>

            <EditText
                    android:id="@+id/address2"
                    style="@style/AddProjectField"
                    android:hint="@string/street_2"/>

            <EditText
                    android:id="@+id/city"
                    style="@style/AddProjectField"
                    android:hint="@string/city"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/state"
                        style="@style/AddProjectField"
                        android:layout_weight="1"
                        android:layout_marginEnd="4dp"
                        android:hint="@string/state"
                        android:textAllCaps="true"/>

                <EditText
                        android:id="@+id/zip"
                        style="@style/AddProjectField"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:hint="@string/zip"/>

            </LinearLayout>


            <!-- County-->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:onClick="@{viewModel::onClickCounty}">

                <TextView
                        style="@style/AddProjectFieldTitle.WithSpacing"
                        android:text="@string/county"
                        android:textAllCaps="true"
                        bind:typeface="@{`Lato-Bold.ttf`}"/>

                <TextView
                        android:id="@+id/county"
                        style="@style/AddProjectFieldLabel"
                        android:hint="@string/select"/>

            </LinearLayout>

            <include layout="@layout/rule_horiz_light"/>

            <!-- Bid Status-->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <TextView
                        style="@style/AddProjectFieldTitle.WithSpacing"
                        android:text="@string/bid_status"
                        android:textAllCaps="true"
                        bind:typeface="@{`Lato-Bold.ttf`}"/>

                <TextView
                        android:id="@+id/bid_status"
                        style="@style/AddProjectFieldLabel"
                        android:hint="@string/select"
                        android:onClick="@{viewModel::onClicked}"/>

            </LinearLayout>

            <include layout="@layout/rule_horiz_light"/>


            <!-- Type -->
            <TextView
                    style="@style/AddProjectFieldTitle"
                    android:text="@string/type"
                    android:textAllCaps="true"
                    bind:typeface="@{`Lato-Bold.ttf`}"/>

            <EditText
                    style="@style/AddProjectField"
                    android:onClick="@{viewModel::onClicked}"/>

            <!-- Est Low -->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <TextView
                        style="@style/AddProjectFieldTitle.WithSpacing"
                        android:text="@string/est_low"
                        android:textAllCaps="true"
                        bind:typeface="@{`Lato-Bold.ttf`}"/>

                <TextView
                        style="@style/AddProjectFieldLabel"
                        android:onClick="@{viewModel::onClicked}"/>

            </LinearLayout>

            <include layout="@layout/rule_horiz_light"/>


            <!-- Stage -->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <TextView
                        style="@style/AddProjectFieldTitle.WithSpacing"
                        android:text="@string/stage"
                        android:textAllCaps="true"
                        bind:typeface="@{`Lato-Bold.ttf`}"/>

                <TextView
                        android:id="@+id/stage"
                        style="@style/AddProjectFieldLabel"
                        android:onClick="@{viewModel::onClicked}"/>

            </LinearLayout>

            <include layout="@layout/rule_horiz_light"/>

            <!-- Target Set Date -->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="40dp">

                <TextView
                        style="@style/AddProjectFieldTitle.WithSpacing"
                        android:text="@string/target_set_date"
                        android:textAllCaps="true"
                        bind:typeface="@{`Lato-Bold.ttf`}"/>

                <TextView
                        android:id="@+id/target_set_date"
                        style="@style/AddProjectFieldLabel"
                        android:onClick="@{viewModel::onClicked}"/>

            </LinearLayout>

            <include layout="@layout/rule_horiz_light"/>

        </LinearLayout>


</layout>