<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_create_password"
        tools:context="com.lecet.app.content.CreatePasswordActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:background="@color/lecetMediumBlue">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="25dp"
                      android:layout_above="@+id/create_account_button"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_password"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText android:hint="@string/password"
                          style="@style/FormField.EditText.Secure"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText android:hint="@string/confirm_password"
                          style="@style/FormField.EditText.Secure"/>

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/selection_bottom_button"
                    android:layout_marginTop="30dp"
                    android:text="@string/next"
                    style="@style/FormField.Button"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
