<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lecet.app.viewmodel.SearchFilterBiddingWithinViewModel" />

        <import type="android.view.View" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lecet.app.content.SearchFilterBiddingWithinActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <!-- MENU -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/lecetShareBlue"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="-5dp">
                    <!-- App Bar -->
                    <include layout="@layout/include_activity_bar_layout" />
                </FrameLayout>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{viewModel.onCancelButtonClick}"
                    android:text="@string/cancel"
                    android:textColor="@color/lecetTextWhite"
                    android:textSize="15sp"
                    bind:typeface="@{`Lato-Bold.ttf`}" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:text="@string/msebidding_within"
                    android:textColor="@color/lecetTextWhite"
                    android:textSize="15sp"
                    bind:typeface="@{`Lato-Bold.ttf`}" />

                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{viewModel.onApplyButtonClick}"
                    android:text="@string/mseapply"
                    android:textColor="@color/lecetTextWhite"
                    android:textSize="15sp"
                    bind:typeface="@{`Lato-Bold.ttf`}" />
            </LinearLayout>

            <!-- BIDDING WITHIN SCHEDULE DETAIL SECTION -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/time_any"
                        style="@style/SearchFilterSectionButton"
                        android:checked="true"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="any"
                        android:text="@string/time_any" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <!-- Future Dates Use Positive Days e.g. 7 -->
                    <RadioButton
                        android:id="@+id/time_7d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`7`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="7"
                        android:text="@string/time_next_7_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_14d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`14`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="14"
                        android:text="@string/time_next_14_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_21d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`21`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="21"
                        android:text="@string/time_next_21_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_30d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`30`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="30"
                        android:text="@string/time_next_30_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <!-- Past Dates Use Negtive Days e.g. -7 -->
                    <RadioButton
                        android:id="@+id/time_last_7d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`-7`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="-7"
                        android:text="@string/time_last_7_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_last_14d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`-14`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="-14"
                        android:text="@string/time_last_14_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_last_21d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`-21`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="-21"
                        android:text="@string/time_last_21_days" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lecetLighterGray" />

                    <RadioButton
                        android:id="@+id/time_last_30d"
                        style="@style/SearchFilterSectionButton"
                        android:checked="@{viewModel.daysInt.equals(`-30`)}"
                        android:onClick="@{viewModel.onSelected}"
                        android:tag="-30"
                        android:text="@string/time_last_30_days" />
                </RadioGroup>

                <!-- Horizontal Separator -->
                <include layout="@layout/rule_horiz_light" />
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>